library/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: library
  template:
    metadata:
      labels:
        app: library
    spec:
      containers:
      - name: library
        image: ghcr.io/smiggiddy/odin-codeprojects/library:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: library-service
spec:
  type: LoadBalancer
  selector:
    app: library
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
