library/devops/library-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: library.odin.thecodedom.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: library-service
            port:
              number: 80
  tls:
  - hosts:
    - library.odin.thecodedom.com
    secretName: library-tls
